# psp_elf_expand

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
include/: elf_types.h  elf_utils.h
src/: elf_utils.cpp  main.cpp
